re PR debug/54534 (Missing location for unused variable)

2012-09-11  Richard Guenther  <rguenther@suse.de>

	PR debug/54534
	* cgraph.h (varpool_can_remove_if_no_refs): Restore dependence
	on flag_toplevel_reorder.

From-SVN: r191176